--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mapbox/tile-reduce": "^3.2.0",
     "@mapbox/tilebelt": "^1.0.1",
     "@turf/turf": "^3.14.3",
+    "@turf/line-overlap": "^4.4.0",
     "geojson-flatten": "^0.2.1"
   },
   "devDependencies": {
