--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "predis/predis": "^1.1",
         "laravelcollective/html": "^5.2",
         "laravel/socialite": "^2.0",
-        "phaza/laravel-postgis": "^3.1"
+        "phaza/laravel-postgis": "^3.1",
+        "fideloper/proxy": "^3.3",
+        "swiftmailer/swiftmailer": "^5.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
