testing picc layers

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/socialite": "^2.0",
         "phaza/laravel-postgis": "^3.1",
         "fideloper/proxy": "^3.3",
-        "swiftmailer/swiftmailer": "^5.2"
+        "swiftmailer/swiftmailer": "^5.2",
+        "jbelien/oauth2-openstreetmap": "^0.1.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
