--- a/package.json
+++ b/package.json
@@ -5,32 +5,31 @@
   "description": "Website and backend script to load GRB data into postgis and explore.  GRB GUI Import and Merge Tool",
   "main": "index.js",
   "dependencies": {
-    "apidoc": "^0.16.1",
+    "@mapbox/geojson-normalize": "0.0.1",
+    "@mapbox/tile-reduce": "^3.3.1",
+    "@mapbox/tilebelt": "^1.0.1",
+    "@turf/line-overlap": "^4.4.0",
+    "@turf/turf": "^3.14.3",
     "catty": "0.0.8",
+    "geojson-flatten": "^0.2.1",
     "geojson-validation": "^0.1.6",
     "geojsontoosm": "^0.0.2",
     "jxon": "^2.0.0-beta.2",
-    "mapshaper": "^0.3.26",
-    "osm-and-geojson": "^0.1.2",
-    "@mapbox/geojson-normalize": "0.0.1",
-    "@mapbox/tile-reduce": "^3.2.0",
-    "@mapbox/tilebelt": "^1.0.1",
-    "@turf/turf": "^3.14.3",
-    "@turf/line-overlap": "^4.4.0",
-    "geojson-flatten": "^0.2.1"
+    "mapshaper": "^0.5.80",
+    "osm-and-geojson": "^0.1.2"
   },
   "devDependencies": {
-    "apidoc": "*",
+    "apidoc": "^0.50.2",
+    "bootstrap-sass": "^3.4.1",
     "browserify": "latest",
-    "uglify-js": "latest",
-    "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
     "gulp-uglify": "^2.0.0",
-    "jquery": "^3.1.0",
-    "laravel-elixir": "^6.0.0-14",
+    "jquery": "^3.6.0",
+    "laravel-elixir": "^6.0.0-18",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
-    "lodash": "^4.16.2",
+    "lodash": "^4.17.21",
+    "uglify-js": "latest",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3"
   },
