--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "geojson-validation": "^0.1.6",
     "geojsontoosm": "^0.0.2",
     "jxon": "^2.0.0-beta.2",
-    "mapshaper": "^0.5.80",
-    "osm-and-geojson": "^0.1.2"
+    "mapshaper": "^0.5.83",
+    "osm-and-geojson": "^0.1.2",
+    "uglifyjs": "^2.4.11"
   },
   "devDependencies": {
     "apidoc": "^0.50.2",
@@ -30,7 +31,7 @@
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.17.21",
-    "uglify-js": "latest",
+    "uglify-js": "^3.14.5",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3"
   },
