adding miniturf browserified - add filter and cleanup logic for PICC data

--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "@mapbox/geojson-normalize": "0.0.1",
     "@mapbox/tile-reduce": "^3.3.1",
     "@mapbox/tilebelt": "^1.0.1",
+    "@turf/area": "^6.5.0",
+    "@turf/boolean-contains": "^6.5.0",
+    "@turf/boolean-intersects": "^6.5.0",
+    "@turf/boolean-overlap": "^6.5.0",
+    "@turf/boolean-within": "^6.5.0",
+    "@turf/intersect": "^6.5.0",
     "@turf/line-overlap": "^4.4.0",
     "@turf/turf": "^3.14.3",
     "catty": "0.0.8",
     "geojson-flatten": "^0.2.1",
     "geojson-validation": "^0.1.6",
-    "geojsontoosm": "^0.0.2",
+    "geojsontoosm": "0.0.2",
     "jxon": "^2.0.0-beta.2",
     "mapshaper": "^0.5.83",
     "osm-and-geojson": "^0.1.2",
+    "turf": "^3.0.14",
     "uglifyjs": "^2.4.11"
   },
   "devDependencies": {
