border logic to delete the right wrong object

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@turf/boolean-contains": "^6.5.0",
     "@turf/boolean-intersects": "^6.5.0",
     "@turf/boolean-overlap": "^6.5.0",
+    "@turf/boolean-point-in-polygon": "^6.5.0",
     "@turf/boolean-within": "^6.5.0",
+    "@turf/centroid": "^6.5.0",
     "@turf/intersect": "^6.5.0",
     "@turf/line-overlap": "^4.4.0",
     "@turf/turf": "^3.14.3",
