--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-APP_ENV=local
-APP_DEBUG=true
+APP_ENV=staging
+APP_DEBUG=false
 API_DEBUG=false
-APP_LOG_LEVEL=debug
+APP_LOG_LEVEL=info
 DATABASE_QUERIES_DEBUG=false
 HASH_ID=false
 
@@ -11,14 +11,14 @@ API_STRICT=false
 
 API_SIGNUP_TOKEN_RELEASE=true
 API_RESET_TOKEN_RELEASE=true
-API_RECOVERY_EMAIL_SUBJECT=grb@bitless.be
+API_RECOVERY_EMAIL_SUBJECT="GRB/OSM tool - Password recovery"
 
-APP_URL=grb.app
-APP_FULL_URL=http://grb.app
-API_DOMAIN=api.grb.app
+APP_URL=staging.grbosm.site
+APP_FULL_URL=https://staging.grbosm.site
+#API_DOMAIN=staging.grbosm.site
 
-APP_KEY=xXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxX
-JWT_SECRET=xXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxX
+APP_KEY=base64:<base_key_here>
+JWT_SECRET=<jwt_secret_here>
 
 JWT_LIVE_TIME=43800
 API_STRICT=false
@@ -36,14 +36,15 @@ APP_LOG=single
 PAGINATION_LIMIT=30
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+
+DB_HOST=localhost
 DB_PORT=5432
 #DB_DATABASE= /var/www/grb-api/storage/app/apidb.sqlite
-DB_DATABASE=grb-api
+DB_DATABASE=grb_api
 DB_USERNAME=grb-data
-DB_PASSWORD=Berkensap11
+DB_PASSWORD=<password_here>
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=null
 REDIS_DATABASE=0
@@ -58,15 +59,15 @@ QUEUE_DRIVER=sync
 
 MAIL_ENABLED=true
 MAIL_DRIVER=smtp
-MAIL_FROM_ADDRESS=grb@byteless.net
-MAIL_FROM_NAME="GRB GIMT API"
-MAIL_HOST=localhost
-MAIL_PORT=25
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_TO_SUPPORT_ADDRESS=grbsupport@byteless.net
-MAIL_TO_SUPPORT_NAME="Hello API Support"
+MAIL_FROM_ADDRESS=grb@grbosm.site
+MAIL_FROM_NAME="GRB/OSM GIMT API"
+MAIL_HOST=<mail_server_password_here>
+MAIL_PORT=587
+MAIL_USERNAME=grb@grbosm.site
+MAIL_PASSWORD=<mail_auth_password_here>
+MAIL_ENCRYPTION=tls
+MAIL_TO_SUPPORT_ADDRESS=grb@grbosm.site
+MAIL_TO_SUPPORT_NAME="GRB/OSM admin"
 
 ELOQUENT_QUERY_CACHE=false
 ELOQUENT_QUERY_CACHE_TIME=60
@@ -96,4 +97,4 @@ AUTH_TWITTER_CLIENT_REDIRECT=
 
 AUTH_GOOGLE_CLIENT_ID=
 AUTH_GOOGLE_CLIENT_SECRET=
-AUTH_GOOGLE_CLIENT_REDIRECT=
+VUTH_GOOGLE_CLIENT_REDIRECT=
