--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "fideloper/proxy": "^3.3",
         "swiftmailer/swiftmailer": "^5.2",
         "jbelien/oauth2-openstreetmap": "^0.1.2",
-        "league/oauth2-client": "^2.6"
+        "league/oauth2-client": "^2.6",
+        "roumen/feed": "v2.10.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
